--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       eruda.init();
     </script>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="theme-color" content="#3f51b5" />
@@ -14,12 +14,57 @@
       name="description"
       content="スポーツイベント管理・表示Webアプリケーション"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Sports Event Web Manager</title>
+
+
+
+    <meta name="msapplication-square70x70logo" content="%PUBLIC_URL%/site-tile-70x70.png">
+    <meta name="msapplication-square150x150logo" content="%PUBLIC_URL%/site-tile-150x150.png">
+    <meta name="msapplication-wide310x150logo" content="%PUBLIC_URL%/site-tile-310x150.png">
+    <meta name="msapplication-square310x310logo" content="%PUBLIC_URL%/site-tile-310x310.png">
+    <meta name="msapplication-TileColor" content="#0078d7">
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="36x36" href="%PUBLIC_URL%/android-chrome-36x36.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="%PUBLIC_URL%/android-chrome-48x48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="%PUBLIC_URL%/android-chrome-72x72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/android-chrome-96x96.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="%PUBLIC_URL%/android-chrome-128x128.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="%PUBLIC_URL%/android-chrome-144x144.png">
+    <link rel="icon" type="image/png" sizes="152x152" href="%PUBLIC_URL%/android-chrome-152x152.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="%PUBLIC_URL%/android-chrome-256x256.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="%PUBLIC_URL%/android-chrome-384x384.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="36x36" href="%PUBLIC_URL%/icon-36x36.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="%PUBLIC_URL%/icon-48x48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="%PUBLIC_URL%/icon-72x72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/icon-96x96.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="%PUBLIC_URL%/icon-128x128.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="%PUBLIC_URL%/icon-144x144.png">
+    <link rel="icon" type="image/png" sizes="152x152" href="%PUBLIC_URL%/icon-152x152.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="%PUBLIC_URL%/icon-160x160.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="196x196" href="%PUBLIC_URL%/icon-196x196.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="%PUBLIC_URL%/icon-256x256.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="%PUBLIC_URL%/icon-384x384.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/icon-512x512.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/icon-16x16.png">
+    <link rel="icon" type="image/png" sizes="24x24" href="%PUBLIC_URL%/icon-24x24.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/icon-32x32.png">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
